Fix file paths and add non-working Day 02

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_subdirectory(thirdparty/abseil-cpp)
 add_executable(aoc22_01 day01.cpp)
 target_link_libraries(aoc22_01 absl::strings)
 
+add_executable(aoc22_02 day02.cpp)
+target_link_libraries(aoc22_02 absl::strings)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
